# galilmc

./: .ci_preparation.sh  CMakeLists.txt  README.md  package.xml  setup.py
config/: dmc_4143.yaml
launch/: galilmc_driver.launch
nodes/: check_available_addresses.py  galilmc_driver.py
src/galilmc/: __init__.py  interface.py
